Fix: Remove extra > character from noscript tag

--- a/mood_detector_web/templates/index.html
+++ b/mood_detector_web/templates/index.html
@@ -27,7 +27,7 @@
         onload="this.media='all'">
     <noscript>
         <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-    </noscript>>
+    </noscript>
 
     <style>
         :root {
